more info for custom jre